# CMakeList.txt: projekt CMake dla elementu Dante, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (Dante "7.22.c" "7.22.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
