# CMakeList.txt: projekt CMake dla elementu 1.26, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (1.26 "1.26.c" "1.26.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
