# CMakeList.txt: projekt CMake dla elementu 10.11, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (10.11 "10.11.c" "10.11.h" "vector_utils.h" "vector_utils.c")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
