# CMakeList.txt: projekt CMake dla elementu 10.12, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (10.12 "10.12.c" "10.12.h" "vector_utils.c" "vector_utils.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
