# CMakeList.txt: projekt CMake dla elementu 10.3, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (10.3 "10.3.c" "10.3.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
