# CMakeList.txt: projekt CMake dla elementu 10.8, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (10.8 "10.8.c" "10.8.h" "vector_utils.h" "vector_utils.c")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
