# CMakeList.txt: projekt CMake dla elementu 11.7, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (11.7 "11.7.c" "11.7.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
