# CMakeList.txt: projekt CMake dla elementu 11.9, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (11.9 "11.9.c" "11.9.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
