# CMakeList.txt: projekt CMake dla elementu 12.1, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (12.1 "12.1.c" "12.1.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
