# CMakeList.txt: projekt CMake dla elementu 5.10, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (5.10 "5.10.c" "5.10.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
