# CMakeList.txt: projekt CMake dla elementu 7.12, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (7.12 "7.12.c" "7.12.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
