# CMakeList.txt: projekt CMake dla elementu 9.1, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (9.1 "9.1.c" "9.1.h" "vector_utils.c" "vector_utils.h" "sort.h" "sort.c")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
