# CMakeList.txt: projekt CMake dla elementu 9.29, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (9.29 "9.29.c" "9.29.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
